--- a/src/app/routes/home/home.component.css
+++ b/src/app/routes/home/home.component.css
@@ -45,3 +45,9 @@
   background-color: red;
   color: #000;
 }
+
+.background-image {
+  background: url('../../../assets/background.png') no-repeat;
+  /*background-size: 100%;*/
+}
+
